--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,43 @@
-{"flutter":{"platforms":{"android":{"default":{"projectId":"suzyapp","appId":"1:604575451488:android:987d6a1f3bdcc7cd23b605","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"suzyapp","configurations":{"android":"1:604575451488:android:987d6a1f3bdcc7cd23b605","ios":"1:604575451488:ios:97381720ea056ae223b605","macos":"1:604575451488:ios:97381720ea056ae223b605","web":"1:604575451488:web:ae58dd1c77a6d3db23b605","windows":"1:604575451488:web:1da2230ce12c52f923b605"}}}}}}
+{
+  "flutter": {
+    "platforms": {
+      "android": {
+        "default": {
+          "projectId": "suzyapp",
+          "appId": "1:604575451488:android:987d6a1f3bdcc7cd23b605",
+          "fileOutput": "android/app/google-services.json"
+        }
+      },
+      "dart": {
+        "lib/firebase_options.dart": {
+          "projectId": "suzyapp",
+          "configurations": {
+            "android": "1:604575451488:android:987d6a1f3bdcc7cd23b605",
+            "ios": "1:604575451488:ios:97381720ea056ae223b605",
+            "macos": "1:604575451488:ios:97381720ea056ae223b605",
+            "web": "1:604575451488:web:ae58dd1c77a6d3db23b605",
+            "windows": "1:604575451488:web:1da2230ce12c52f923b605"
+          }
+        }
+      }
+    }
+  },
+  "functions": [
+    {
+      "source": "functions",
+      "codebase": "default",
+      "disallowLegacyRuntimeConfig": true,
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log",
+        "*.local"
+      ],
+      "predeploy": [
+        "npm --prefix \"$RESOURCE_DIR\" run lint",
+        "npm --prefix \"$RESOURCE_DIR\" run build"
+      ]
+    }
+  ]
+}
