01/19 this is after adventure deployemnt
this is after adventure deployemnt--- 01/19 this is after adventure deployemnt

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ flutter:
     - assets/images/adventure/
     - assets/images/Bathukamma/
     - assets/images/missing_lunchbox/
+    - assets/images/adventure/space/
     - assets/images/shy_lion_roar/
     - assets/audio/
     - assets/templates/
