--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,6 @@ windows/flutter/generated_plugins.cmake
 linux/flutter/generated_plugin_registrant.cc
 linux/flutter/generated_plugin_registrant.h
 pubspec.lock
+*.bak
+pubspec.lock
+ios/Runner.xcodeproj/project.pbxproj
