--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ flutter:
   assets:
     - assets/stories/
     - assets/images/
+    - assets/images/coloring/
     - assets/images/adventure/
     - assets/images/Bathukamma/
     - assets/images/missing_lunchbox/
@@ -73,6 +74,7 @@ flutter:
     - assets/audio/
     - assets/audio/sfx/page_flip.mp3
     - assets/templates/
+    - assets/coloring/coloring_pages.json
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
