--- a/functions/package.json
+++ b/functions/package.json
@@ -1,18 +1,17 @@
 {
   "name": "functions",
-
-
   "scripts": {
-  "lint": "echo \"Skipping lint\"",
-  "build": "tsc",
-  "deploy": "npm run build",
-  "serve": "npm run build && firebase emulators:start --only functions"
-},
+    "lint": "echo \"Skipping lint\"",
+    "build": "tsc",
+    "deploy": "npm run build",
+    "serve": "npm run build && firebase emulators:start --only functions"
+  },
   "engines": {
     "node": "24"
   },
   "main": "lib/index.js",
   "dependencies": {
+    "elevenlabs": "^1.59.0",
     "firebase-admin": "^13.6.0",
     "firebase-functions": "^7.0.2",
     "form-data": "^4.0.5",
