--- a/firebase.json
+++ b/firebase.json
@@ -23,7 +23,6 @@
     }
   },
   "functions": [
-    
     {
       "source": "functions",
       "codebase": "default",
@@ -35,15 +34,29 @@
         "firebase-debug.*.log",
         "*.local"
       ],
-     "predeploy": [
-  "npm --prefix \"$RESOURCE_DIR\" run build"
-]
-
+      "predeploy": [
+        "npm --prefix \"$RESOURCE_DIR\" run build"
+      ]
     }
-
-
-
-
-    
-  ]
+  ],
+  "hosting": {
+    "public": "build/web",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
+  },
+  "firestore": {
+    "database": "(default)",
+    "location": "nam5",
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
+  }
 }
