--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   cached_network_image: ^3.4.0
   google_fonts: ^6.2.1
   http: ^1.2.2
+  package_info_plus: ^8.1.2
   shared_preferences: ^2.2.3
   record: ^4.4.0
   path_provider: ^2.1.3
